--- a/movie-rater-frontend/package.json
+++ b/movie-rater-frontend/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
+    "alertifyjs": "^1.13.1",
     "angular-font-awesome": "^3.1.2",
     "ngx-cookie-service": "^12.0.0",
     "rxjs": "~6.4.0",
